Se ven los valores en el dashboard

--- a/modules/Dashboard/dashboard.html
+++ b/modules/Dashboard/dashboard.html
@@ -80,7 +80,7 @@
                     </div>
                     <div class="card-content">
                         <h3>Total de facturas y tickets</h3>
-                        <div class="count">-</div>
+                        <div class="count" id="total-count">-</div>
                     </div>
                 </div>
                 <div class="card">
@@ -89,7 +89,7 @@
                     </div>
                     <div class="card-content">
                         <h3>Tickets</h3>
-                        <div class="count">-</div>
+                        <div class="count" id="tickets-count">-</div>
                     </div>
                 </div>
                 <div class="card">
@@ -98,7 +98,7 @@
                     </div>
                     <div class="card-content">
                         <h3>Facturas</h3>
-                        <div class="count">-</div>
+                        <div class="count" id="facturas-count">-</div>
                     </div>
                 </div>
             </section>
@@ -128,6 +128,7 @@
 
     <script src="/modules/Dashboard/graficas/grafica-tipos.js"></script>
     <script src="/modules/Dashboard/graficas/grafica-estatus.js"></script>
+    <script src="/modules/Dashboard/dashboard.js"></script>
     <script src="/JS/menu.js"></script>
 </body>
 </html>
