ya se corrigieron los colores de las graficas y el porcentaje

--- a/modules/Dashboard/dashboard.html
+++ b/modules/Dashboard/dashboard.html
@@ -109,7 +109,7 @@
                 <!-- Gráfica de Tipos -->
                 <div class="chart-card" style="flex:1; min-width:320px;">
                     <div class="chart-title">
-                        <i class="fas fa-list-alt" style="color:#0284c7"></i>
+                        <i class="fas fa-list-alt" style="color:#1D3E53"></i>
                         Facturas por Día
                     </div>
                     <div id="type-chart" style="width:100%;height:320px;"></div>
@@ -118,7 +118,7 @@
                 <!-- Gráfica de Tickets por Día -->
                 <div class="chart-card" style="flex:1; min-width:320px;">
                     <div class="chart-title">
-                        <i class="fas fa-ticket-alt" style="color:#22c55e"></i>
+                        <i class="fas fa-ticket-alt" style="color:#77ABB7"></i>
                         Tickets por Día
                     </div>
                     <div id="tickets-dia-chart" style="width:100%;height:320px;"></div>
