--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login - Sistema de Facturas</title>
+  <title>Scanalyze</title>
   <link rel="stylesheet" href="/CSS/general.css">
   <link rel="stylesheet" href="/CSS/index.css">
+  <link rel="icon" href="/img/inxiteblanco.png" type="image/png">
 
 </head>
   <body>
