--- a/modules/Dashboard/dashboard.html
+++ b/modules/Dashboard/dashboard.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dashboard - Scanalyze</title>
+    <title>Scanalyze</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Roboto:wght@400;500&display=swap" rel="stylesheet" />
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link rel="stylesheet" href="/CSS/general.css" />
     <link rel="stylesheet" href="/CSS/menu.css" />
+<link rel="icon" href="/img/inxiteblanco.png" type="image/png">
   </head>
   <body>
     <div class="app-container">
