--- a/modules/registros/registros.html
+++ b/modules/registros/registros.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sistema de Gestión - Diseño Moderno</title>
+    <title>Scanalyze</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -14,6 +14,7 @@
     />
     <link rel="stylesheet" href="/CSS/general.css" />
     <link rel="stylesheet" href="/CSS/menu.css" />
+  <link rel="icon" href="/img/inxiteblanco.png" type="image/png">
   </head>
   <body>
     <div class="app-container">
