Actualización de dashboard y estilos

--- a/modules/registros/registros.html
+++ b/modules/registros/registros.html
@@ -12,9 +12,9 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Montserrat:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/CSS/general.css" />
-    <link rel="stylesheet" href="/CSS/menu.css" />
-  <link rel="icon" href="/img/inxiteblanco.png" type="image/png">
+    <link rel="stylesheet" href="CSS/general.css" />
+    <link rel="stylesheet" href="CSS/menu.css" />
+  <link rel="icon" href="img/inxiteblanco.png" type="image/png">
   </head>
   <body>
     <div class="app-container">
@@ -162,8 +162,8 @@
       </main>
     </div>
 
-    <script src="/modules/registros/registros.js"></script>
-    <script src="/Js/menu.js"></script>
+    <script src="modules/registros/registros.js"></script>
+    <script src="Js/menu.js"></script>
     <script src="https://cdn.sheetjs.com/xlsx-0.19.3/package/dist/xlsx.full.min.js"></script>
 
     <!-- <script src="/Js/registros.js"></script> -->
