--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Scanalyze</title>
-  <link rel="stylesheet" href="/CSS/general.css">
-  <link rel="stylesheet" href="/CSS/index.css">
-  <link rel="icon" href="/img/inxiteblanco.png" type="image/png">
+  <link rel="stylesheet" href="CSS/general.css">
+  <link rel="stylesheet" href="CSS/index.css">
+  <link rel="icon" href="img/inxiteblanco.png" type="image/png">
 
 </head>
   <body>
@@ -48,6 +48,6 @@
     
   </main>
 
-  <script src="/index.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
