Actualización de dashboard y estilos

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="login-bg"></div>
     <main class="login-container" role="main">
       <div class="login-logo">
-        <img src="/img/inxite.png" alt="Logo FactuTech">
+        <img src="img/inxite.png" alt="Logo FactuTech">
       </div>
       <header class="login-header">
         <h1>Scanalyze</h1>
