--- a/modules/Dashboard/dashboard.html
+++ b/modules/Dashboard/dashboard.html
@@ -6,9 +6,9 @@
     <title>Scanalyze</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Roboto:wght@400;500&display=swap" rel="stylesheet" />
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-    <link rel="stylesheet" href="CSS/general.css" />
-    <link rel="stylesheet" href="CSS/menu.css" />
-<link rel="icon" href="img/inxiteblanco.png" type="image/png">
+    <link rel="stylesheet" href="../../CSS/general.css" />
+    <link rel="stylesheet" href="../../CSS/menu.css" />
+<link rel="icon" href="../../img/inxiteblanco.png" type="image/png">
   </head>
   <body>
     <div class="app-container">
@@ -140,9 +140,9 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/echarts@5.4.3/dist/echarts.min.js"></script>
-    <script src="modules/Dashboard/graficas/grafica-pastel.js"></script>
-    <script src="modules/Dashboard/dashboard.js"></script>
-    <script src="JS/menu.js"></script>
+    <script src="graficas/grafica-pastel.js"></script>
+    <script src="dashboard.js"></script>
+    <script src="../../JS/menu.js"></script>
 </body>
 </html>
 
