--- a/modules/Dashboard/dashboard.html
+++ b/modules/Dashboard/dashboard.html
@@ -141,6 +141,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/echarts@5.4.3/dist/echarts.min.js"></script>
     <script src="graficas/grafica-pastel.js"></script>
+    <script src="graficas/grafica-barras.js"></script>
     <script src="dashboard.js"></script>
     <script src="../../JS/menu.js"></script>
 </body>
