--- a/modules/Dashboard/dashboard.html
+++ b/modules/Dashboard/dashboard.html
@@ -41,7 +41,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="modules/registros/registros.html" class="nav-item">
+                            <a href="../registros/registros.html" class="nav-item">
                                 <i class="fas fa-database" aria-hidden="true"></i>
                                 <span>Tickets y Facturas</span>
                             </a>
