Actualización de dashboard y estilos

--- a/modules/Dashboard/dashboard.html
+++ b/modules/Dashboard/dashboard.html
@@ -143,7 +143,7 @@
     <script src="graficas/grafica-pastel.js"></script>
     <script src="graficas/grafica-barras.js"></script>
     <script src="dashboard.js"></script>
-    <script src="../../JS/menu.js"></script>
+    <script src="../../Js/menu.js"></script>
 </body>
 </html>
 
