--- a/index.html
+++ b/index.html
@@ -1,53 +1,59 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Scanalyze</title>
-  <link rel="stylesheet" href="CSS/general.css">
-  <link rel="stylesheet" href="CSS/index.css">
-  <link rel="icon" href="img/inxiteblanco.png" type="image/png">
-
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Login - Scanalyze</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Roboto:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="CSS/index.css" />
+    <link rel="icon" href="img/inxiteblanco-sinfondo.png" type="image/png" />
+  </head>
   <body>
-    <div class="login-bg"></div>
-    <main class="login-container" role="main">
-      <div class="login-logo">
-        <img src="img/inxite.png" alt="Logo FactuTech">
-      </div>
-      <header class="login-header">
+    <div class="particles" id="particles-js"></div>
+    <div class="login-container">
+      <div class="login-header">
+        <img src="img/inxiteblanco-sinfondo.png" alt="Logo Scanalyze" class="logo-main" />
         <h1>Scanalyze</h1>
-        <p></p>
-      </header>
-
-    <form class="login-form" novalidate aria-label="Formulario de inicio de sesión">
-      <div class="form-group">
-        <label for="email">Correo electrónico</label>
-        <input type="email" id="email" name="email" 
-               placeholder="usuario@empresa.com" 
-               required aria-required="true">
-        <small class="error-message" id="email-error"></small>
+        <p>Sistema de Control de Facturas y Tickets</p>
       </div>
-      <div class="form-group password-group">
-        <label for="password">Contraseña</label>
-        <div class="input-wrapper">
-          <input type="password" id="password" name="password"
-                 placeholder="••••••••" 
-                 required aria-required="true">
-          <button type="button" class="toggle-password" aria-label="Mostrar u ocultar contraseña">
-            
-          </button>
-        </div>
-            </div>
-   
-      <button type="submit" class="login-btn" id="login-btn">
-        Iniciar sesión
-      </button>
-      <div class="loading-spinner" id="loading-spinner" aria-hidden="true"></div>
-    </form>
-    
-  </main>
 
-  <script src="index.js"></script>
-</body>
+      <form
+        class="login-form"
+        novalidate
+        aria-label="Formulario de inicio de sesión"
+      >
+        <div class="input-group">
+          <input type="email" id="email" name="email" required />
+          <label for="email"></label>
+          <i class="ri-user-line"></i>
+        </div>
+
+        <div class="input-group">
+          <input type="password" id="password" name="password" required />
+          <label for="password"></label>
+          <i class="ri-lock-line"></i>
+          <button
+            type="button"
+            class="toggle-password"
+            aria-label="Mostrar u ocultar contraseña"
+          ></button>
+        </div>
+
+        <button type="submit" class="login-btn" id="login-btn">
+          <span class="btn-text">Iniciar Sesión</span>
+          <div class="btn-loader"></div>
+        </button>
+      </form>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="index.js"></script>
+  </body>
 </html>
