--- a/modules/Dashboard/dashboard.html
+++ b/modules/Dashboard/dashboard.html
@@ -65,12 +65,24 @@
       <main class="main-content">
         <header class="main-header">
           <div class="header-content">
-          
+            <div class="header-left-image">
+              <img
+                src="../../img/inxiteblanco-sinfondo.png"
+                alt="Logo Izquierda"
+                class="header-logo"
+              />
+            </div>
             <div class="header-center">
               <h1>Sistema de Control de Facturas y Tickets</h1>
               <div class="header-date" id="current-date"></div>
             </div>
-            
+            <div class="header-right-image">
+              <img
+                src="../../img/inxiteblanco-sinfondo.png"
+                alt="Logo Derecha"
+                class="header-logo"
+              />
+            </div>
           </div>
         </header>
 
