Listo para empezar con laa ctualizacion de las funciones de la tabla

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="login-container">
       <div class="login-header">
         <img src="img/inxiteblanco-sinfondo.png" alt="Logo Scanalyze" class="logo-main" />
-        <h1>Scanalyze</h1>
+        <h1 class="logo-text">Scanalyze</h1>
         <p>Sistema de Control de Facturas y Tickets</p>
       </div>
 
