--- a/modules/registros/registros.html
+++ b/modules/registros/registros.html
@@ -63,18 +63,18 @@
 
       <!-- Main Content -->
       <main class="main-content">
-        <header class="main-header">
-          <h1>
-            <span style="font-size: 1.5rem">📊</span> Registros de Facturas y
-            Tickets
-          </h1>
-          <div class="header-actions">
-            <div class="search-bar">
-              <input type="text" placeholder="Buscar en el sistema..." />
-              <i class="ri-search-line"></i>
-            </div>
-          </div>
-        </header>
+        <header class="main-header" style="background: none; box-shadow: none; padding-bottom: 0;">
+  <div style="display: flex; align-items: center; justify-content: space-between; gap: 16px;">
+    <h1 style="font-size: 2rem; font-family: 'Montserrat', sans-serif; font-weight: 700; color: #222; margin: 0; display: flex; align-items: center; gap: 8px;">
+      <img src="https://img.icons8.com/color/48/000000/combo-chart--v1.png" alt="icon" style="height: 32px; width: 32px; vertical-align: middle;">
+      Registros de Facturas y Tickets
+    </h1>
+    <div class="search-bar" style="min-width: 260px;">
+      <input type="text" placeholder="Buscar en el sistema..." />
+      <i class="ri-search-line"></i>
+    </div>
+  </div>
+</header>
 
         <!-- Cards Section -->
         <section class="cards-section">
