--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             class="toggle-password"
             aria-label="Mostrar u ocultar contraseña"
           ></button>
+          <div id="password-error" class="input-error"></div> <!-- Aquí debe ir -->
         </div>
 
         <button type="submit" class="login-btn" id="login-btn">
