Ya se conecto a la nueva hoja

--- a/modules/Dashboard/dashboard.html
+++ b/modules/Dashboard/dashboard.html
@@ -65,23 +65,12 @@
       <main class="main-content">
         <header class="main-header">
           <div class="header-content">
-            <div class="header-left-image">
-              <img
-                src="../../img/inxiteblanco-sinfondo.png"
-                alt="Logo Izquierda"
-                class="header-logo"
-              />
-            </div>
-            <div class="header-center">
-              <h1>Sistema de Control de Facturas y Tickets</h1>
-              <div class="header-date" id="current-date"></div>
-            </div>
-            <div class="header-right-image">
-              <img
-                src="../../img/inxiteblanco-sinfondo.png"
-                alt="Logo Derecha"
-                class="header-logo"
-              />
+            <div class="header-center" style="flex-direction:row;align-items:center;gap:32px;">
+              <img src="../../img/inxiteblanco-sinfondo.png" alt="Logo Centro" style="width:80px;height:80px;" />
+              <div>
+                <h1>Sistema de Control de Facturas y Tickets</h1>
+                <div class="header-date" id="current-date"></div>
+              </div>
             </div>
           </div>
         </header>
