--- a/modules/registros/registros.html
+++ b/modules/registros/registros.html
@@ -65,14 +65,14 @@
       <main class="main-content">
         <header class="main-header" style="background: none; box-shadow: none; padding-bottom: 0;">
   <div style="display: flex; align-items: center; justify-content: space-between; gap: 16px;">
+    
     <h1 style="font-size: 2rem; font-family: 'Montserrat', sans-serif; font-weight: 700; color: #222; margin: 0; display: flex; align-items: center; gap: 8px;">
-      <img src="https://img.icons8.com/color/48/000000/combo-chart--v1.png" alt="icon" style="height: 32px; width: 32px; vertical-align: middle;">
-      Registros de Facturas y Tickets
+          Registros de Facturas y Tickets
     </h1>
-    <div class="search-bar" style="min-width: 260px;">
-      <input type="text" placeholder="Buscar en el sistema..." />
-      <i class="ri-search-line"></i>
+    <div class="header-subtitle">
+      Sistema INXITE / Gestión de Gastos
     </div>
+  
   </div>
 </header>
 
@@ -120,6 +120,13 @@
         <section class="permits-table">
           <div class="table-header-flex">
             <h3>Listado de Facturas y Tickets</h3>
+
+
+             <div class="search-bar" style="min-width: 260px;">
+      <input type="text" placeholder="Buscar en el sistema..." />
+      <i class="ri-search-line"></i>
+    </div>
+
 
             <button class="btn primary">
               <i class="ri-download-line"></i> Descargar CSV
