--- a/modules/Dashboard/dashboard.html
+++ b/modules/Dashboard/dashboard.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
     <script src="https://cdn.jsdelivr.net/npm/echarts@5.4.3/dist/echarts.min.js"></script>
-    <link rel="stylesheet" href="../../CSS/general.css" />
+    <link rel="stylesheet" href="../../CSS/dash.css" />
     <link rel="stylesheet" href="../../CSS/menu.css" />
     <link rel="icon" href="../../img/inxiteblanco.png" type="image/png" />
   </head>
@@ -64,16 +64,9 @@
       <!-- Main Content -->
       <main class="main-content">
         <header class="main-header">
-          <div class="header-content">
-            <div class="header-center" style="flex-direction:row;align-items:center;gap:32px;">
-              <img src="../../img/inxiteblanco-sinfondo.png" alt="Logo Centro" style="width:80px;height:80px;" />
-              <div>
-                <h1>Sistema de Control de Facturas y Tickets</h1>
-                <div class="header-date" id="current-date"></div>
-              </div>
-            </div>
-          </div>
-        </header>
+  <h1>Registros de Facturas y Tickets</h1>
+  <div class="header-subtitle">Sistema INXITE / Gestión de Gastos</div>
+</header>
 
         <!-- Cards Section -->
         <section class="cards-section">
