--- a/modules/Dashboard/dashboard.html
+++ b/modules/Dashboard/dashboard.html
@@ -35,13 +35,13 @@
           <ul>
             <li class="active">
               <a href="#">
-                <i class="ri-pie-chart-2-line"></i>
+                <i class="ri-dashboard-line"></i>
                 <span>Dashboard</span>
               </a>
             </li>
             <li>
               <a href="../registros/registros.html">
-                <i class="ri-file-list-2-line"></i>
+                <i class="ri-archive-line"></i>
                 <span>Tickets y Facturas</span>
               </a>
             </li>
@@ -64,9 +64,17 @@
       <!-- Main Content -->
       <main class="main-content">
         <header class="main-header">
-  <h1>Registros de Facturas y Tickets</h1>
+  
+       
+          
+          <h1>Registros de Facturas y Tickets</h1>
   <div class="header-subtitle">Sistema INXITE / Gestión de Gastos</div>
+  
+     <div style="display: flex; justify-content: center; margin-top: 12px;">
+    <img src="../../img/inxite.png" alt="Logo INXITE" style="height: 70px;"/>
+  </div>
 </header>
+<!-- ...existing code... -->
 
         <!-- Cards Section -->
         <section class="cards-section">
