--- a/modules/registros/registros.html
+++ b/modules/registros/registros.html
@@ -35,13 +35,13 @@
           <ul>
             <li>
               <a href="../Dashboard/dashboard.html">
-                <i class="ri-pie-chart-2-line"></i>
+                <i class="ri-dashboard-line"></i>
                 <span>Dashboard</span>
               </a>
             </li>
             <li class="active">
               <a href="registros.html">
-                <i class="ri-file-list-2-line"></i>
+                <i class="ri-archive-line"></i>
                 <span>Tickets y Facturas</span>
               </a>
             </li>
