Ya realice lo de filtrar

--- a/modules/registros/registros.html
+++ b/modules/registros/registros.html
@@ -174,11 +174,12 @@
     <!-- Filtro desplegable -->
 <div class="filter-dropdown">
   <button class="filter-btn">
-    <i class="ri-filter-3-line"></i>
-    <i class="ri-arrow-down-s-line"></i>
     <span>Filtrar</span>
+    <i class="fa-solid fa-filter"></i>
+    
   </button>
   <div class="filter-menu">
+    <div class="filter-option">Todos</div>
     <div class="filter-option">Facturas</div>
     <div class="filter-option">Tickets</div>
   </div>
