--- a/modules/Dashboard/dashboard.html
+++ b/modules/Dashboard/dashboard.html
@@ -184,35 +184,20 @@
     <div class="chart-title">Analytics Overview</div>
     <div class="chart-container">
       <!-- Puedes reemplazar esto por un canvas/echarts dinámico -->
-      <svg width="100%" height="220">
-        <polyline points="20,180 60,140 100,160 140,120 180,140 220,100 260,80"
-          style="fill:none;stroke:#003B5C;stroke-width:3"/>
-        <circle cx="20" cy="180" r="5" fill="#FF6F00"/>
-        <circle cx="60" cy="140" r="5" fill="#FF6F00"/>
-        <circle cx="100" cy="160" r="5" fill="#FF6F00"/>
-        <circle cx="140" cy="120" r="5" fill="#FF6F00"/>
-        <circle cx="180" cy="140" r="5" fill="#FF6F00"/>
-        <circle cx="220" cy="100" r="5" fill="#FF6F00"/>
-        <circle cx="260" cy="80" r="5" fill="#FF6F00"/>
-        <!-- Ejes y labels -->
-        <text x="20" y="210" font-size="12" fill="#4A4A4A">Jan</text>
-        <text x="60" y="210" font-size="12" fill="#4A4A4A">Feb</text>
-        <text x="100" y="210" font-size="12" fill="#4A4A4A">Mar</text>
-        <text x="140" y="210" font-size="12" fill="#4A4A4A">Apr</text>
-        <text x="180" y="210" font-size="12" fill="#4A4A4A">May</text>
-        <text x="220" y="210" font-size="12" fill="#4A4A4A">Jun</text>
-        <text x="260" y="210" font-size="12" fill="#4A4A4A">Jul</text>
-      </svg>
+      
     </div>
   </div>
 <!--Aca va la grafica de pastel -->
-  <div class="chart-card">
-      <div class="chart-title">Nombre</div>
-  </div>
+ <div class="chart-card">
+<!-- Ejemplo de tu título -->
+<div class="chart-title">Distribución Tickets/Facturas</div>
+  <div id="distribution-chart" style="width:100%;height:300px;"></div>
+</div>
 </div>
       </main>
     </div>
     <script src="../../Js/menu.js"></script>
     <script src="dashboard.js"></script>
+    <script src="../../modules/Dashboard/graficas/grafica-pastel.js"></script>
   </body>
 </html>
