--- a/modules/Dashboard/dashboard.html
+++ b/modules/Dashboard/dashboard.html
@@ -180,17 +180,21 @@
 
 <!-- Dashboard Grid (Gráficas y actividades) -->
 <div class="dashboard-section dashboard-grid">
-  <div class="chart-card">
-    <div class="chart-title">Analytics Overview</div>
-    <div class="chart-container">
-      <!-- Puedes reemplazar esto por un canvas/echarts dinámico -->
-      
-    </div>
+<!-- dashboard.html -->
+<div class="chart-card">
+  <div class="chart-title" style="display: flex; align-items: center; gap: 8px;">
+    <i class="ri-store-2-line" style="font-size: 1.5rem; color: #FF6F00;"></i>
+    <span>Desglose por establecimientos</span>
   </div>
+  <div id="establecimientos-chart" style="width:100%;height:320px;"></div>
+</div>
 <!--Aca va la grafica de pastel -->
  <div class="chart-card">
 <!-- Ejemplo de tu título -->
-<div class="chart-title">Distribución Tickets/Facturas</div>
+<div class="chart-title" style="display: flex; align-items: center; gap: 8px;">
+  <i class="ri-file-list-3-line" style="font-size: 1.5rem; color: #FF6F00;"></i>
+  <span>Distribución Tickets/Facturas</span>
+</div>
   <div id="distribution-chart" style="width:100%;height:300px;"></div>
 </div>
 </div>
@@ -199,5 +203,6 @@
     <script src="../../Js/menu.js"></script>
     <script src="dashboard.js"></script>
     <script src="../../modules/Dashboard/graficas/grafica-pastel.js"></script>
+  <script src="../../modules/Dashboard/graficas/grafica-barra.js"></script>
   </body>
 </html>
