Agregue el menu

--- a/modules/Dashboard/dashboard.html
+++ b/modules/Dashboard/dashboard.html
@@ -33,7 +33,9 @@
       <i class="ri-arrow-right-s-line collapse-icon"></i>
     </button>
   </div>
-        <nav class="sidebar-nav">
+       
+  
+  <nav class="sidebar-nav">
           <ul>
             <li class="active">
               <a href="#">
@@ -47,8 +49,24 @@
                 <span>Tickets y Facturas</span>
               </a>
             </li>
+            <li>
+              <a href="../proyectos/proyectos.html">
+                <i class="ri-archive-line"></i>
+                <span>Proyectos</span>
+              </a>
+            </li>
+            <li>
+              <a href="../trabajador/trabajador.html">
+                <i class="ri-archive-line"></i>
+                <span>Trabajador</span>
+              </a>
+            </li>
           </ul>
         </nav>
+
+
+
+
         <div class="sidebar-footer">
           <div class="user-profile">
             <div class="avatar">Ad</div>
