--- a/modules/registros/registros.html
+++ b/modules/registros/registros.html
@@ -32,18 +32,30 @@
             <i class="ri-arrow-right-s-line collapse-icon"></i>
           </button>
         </div>
-        <nav class="sidebar-nav">
+          <nav class="sidebar-nav">
           <ul>
-            <li>
-              <a href="../Dashboard/dashboard.html">
+            <li >
+              <a href="#">
                 <i class="ri-pie-chart-2-line"></i>
                 <span>Dashboard</span>
               </a>
             </li>
             <li class="active">
-              <a href="registros.html">
+              <a href="../registros/registros.html">
                 <i class="ri-archive-line"></i>
                 <span>Tickets y Facturas</span>
+              </a>
+            </li>
+            <li>
+              <a href="../proyectos/proyectos.html">
+                <i class="ri-archive-line"></i>
+                <span>Proyectos</span>
+              </a>
+            </li>
+            <li>
+              <a href="../trabajador/trabajador.html">
+                <i class="ri-archive-line"></i>
+                <span>Trabajador</span>
               </a>
             </li>
           </ul>
