modificacion al menu

--- a/modules/proyectos/proyectos.html
+++ b/modules/proyectos/proyectos.html
@@ -35,7 +35,7 @@
   <nav class="sidebar-nav">
           <ul>
             <li >
-              <a href="#">
+              <a href="../Dashboard/dashboard.html">
                 <i class="ri-pie-chart-2-line"></i>
                 <span>Dashboard</span>
               </a>
@@ -46,18 +46,21 @@
                 <span>Tickets y Facturas</span>
               </a>
             </li>
-            <li class="active">
-              <a href="../proyectos/proyectos.html">
-                <i class="ri-archive-line"></i>
-                <span>Proyectos</span>
-              </a>
-            </li>
-            <li>
-              <a href="../trabajador/trabajador.html">
-                <i class="ri-archive-line"></i>
-                <span>Trabajador</span>
-              </a>
-            </li>
+                 <li class="has-submenu open">
+      <a href="#" class="submenu-toggle">
+        <i class="ri-add-line"></i>
+        <span>Registrar</span>
+        <i class="ri-arrow-down-s-line submenu-icon"></i>
+      </a>
+      <ul class="submenu">
+        <li>
+          <a href="../proyectos/proyectos.html" class="submenu-link active">Proyecto</a>
+        </li>
+        <li>
+          <a href="../trabajador/trabajador.html" class="submenu-link">Trabajador</a>
+        </li>
+      </ul>
+    </li>
           </ul>
         </nav>
 
