se agrego el menu

--- a/modules/Dashboard/dashboard.html
+++ b/modules/Dashboard/dashboard.html
@@ -49,20 +49,26 @@
                 <span>Tickets y Facturas</span>
               </a>
             </li>
-               <li class="has-submenu open">
+               <li class="has-submenu ">
       <a href="#" class="submenu-toggle">
         <i class="ri-add-line"></i>
         <span>Registrar</span>
         <i class="ri-arrow-down-s-line submenu-icon"></i>
       </a>
-      <ul class="submenu">
-        <li>
-          <a href="../proyectos/proyectos.html" class="submenu-link active">Proyecto</a>
-        </li>
-        <li>
-          <a href="../trabajador/trabajador.html" class="submenu-link">Trabajador</a>
-        </li>
-      </ul>
+     <ul class="submenu">
+  <li>
+    <a href="../proyectos/proyectos.html" class="submenu-link">
+      <i class="ri-folder-2-line"></i>
+      Proyecto
+    </a>
+  </li>
+  <li>
+    <a href="../trabajador/trabajador.html" class="submenu-link">
+      <i class="ri-user-3-line"></i>
+      Trabajador
+    </a>
+  </li>
+</ul>
     </li>
           </ul>
         </nav>
