--- a/modules/trabajador/trabajador.html
+++ b/modules/trabajador/trabajador.html
@@ -127,7 +127,7 @@
           margin-bottom: 5px;
           text-align: left;
         ">
-          Registros de Proyectos
+          Registros de trabajadores
         </h1>
         <div class="header-subtitle" style="
           font-size: 0.8rem;
@@ -145,6 +145,29 @@
 
         <!-- Cards Section -->
 
+
+
+        <div>
+          <div class="proyectos-toolbar">
+            <button class="btn-nuevo">
+              <i class="ri-add-line"></i>
+              Nuevo Trabajador
+            </button>
+            <div class="search-bar">
+              <input type="text" class="input-buscar" placeholder="Buscar...">
+              <i class="ri-search-line"></i>
+            </div>
+             <button class="btn-asignar">
+              <i class="ri-add-line"></i>
+              Asignar proyecto
+            </button>
+          </div>
+        </div>
+
+
+
+
+
         <!-- Registros Table -->
         <section class="permits-table">
           <div class="table-header-flex">
@@ -161,9 +184,25 @@
 
           <h3 class="listado-title">
   <i class="ri-table-line" style="color:#FF6F00; margin-right:1px; font-size:1.2em;"></i>
-  Listado de Facturas y Tickets
+  Listado de Trabajadores
 </h3>
 
+
+ <div class="table-container">
+      <table id="trabajadorTable">
+        <thead>
+          <tr>
+            <th>Responsable</th>
+            <th>Puesto</th>
+            <th>Cliente</th>
+            <th>Acciones</th>
+          </tr>
+        </thead>
+        <tbody id="table-body">
+          <!-- Aquí se llenarán los datos con JS -->
+        </tbody>
+      </table>
+    </div>
 
 
 
@@ -176,7 +215,43 @@
     <!-- Modal de detalle -->
     
 
-    <script src="proyectos.js"></script>
+    <!-- Modal Nuevo Trabajador -->
+<div id="modalNuevoTrabajador" class="modal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.3); justify-content:center; align-items:center; z-index:1000;">
+  <div style="background:#fff; padding:32px 24px; border-radius:16px; min-width:320px; box-shadow:0 4px 24px rgba(0,59,92,0.12); position:relative;">
+    <button id="cerrarModalNuevoTrabajador" style="position:absolute; top:12px; right:12px; background:none; border:none; font-size:1.2em; cursor:pointer;">
+      <i class="ri-close-line"></i>
+    </button>
+    <h2 style="margin-bottom:18px; color:#003B5C;">Nuevo Trabajador</h2>
+    <form id="formNuevoTrabajador">
+      <label>Nombre</label>
+      <input type="text" name="nombre" style="width:100%; margin-bottom:12px; padding:8px; border-radius:6px; border:1px solid #ececec;">
+      <label>Puesto</label>
+      <input type="text" name="puesto" style="width:100%; margin-bottom:12px; padding:8px; border-radius:6px; border:1px solid #ececec;">
+      <label>ID Empleado</label>
+      <input type="text" name="idEmpleado" style="width:100%; margin-bottom:18px; padding:8px; border-radius:6px; border:1px solid #ececec;">
+      <button type="submit" style="background:#FF6F00; color:#fff; border:none; padding:10px 18px; border-radius:6px; cursor:pointer;">Guardar</button>
+    </form>
+  </div>
+</div>
+
+    <!-- Modal Asignar Proyecto -->
+<div id="modalAsignarProyecto" class="modal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.3); justify-content:center; align-items:center; z-index:1000;">
+  <div style="background:#fff; padding:32px 24px; border-radius:16px; min-width:320px; box-shadow:0 4px 24px rgba(0,59,92,0.12); position:relative;">
+    <button id="cerrarModalAsignarProyecto" style="position:absolute; top:12px; right:12px; background:none; border:none; font-size:1.2em; cursor:pointer;">
+      <i class="ri-close-line"></i>
+    </button>
+    <h2 style="margin-bottom:18px; color:#003B5C;">Asignar proyecto</h2>
+    <form id="formAsignarProyecto">
+      <label>Responsable</label>
+      <input type="text" name="responsable" style="width:100%; margin-bottom:12px; padding:8px; border-radius:6px; border:1px solid #ececec;">
+      <label>Proyecto</label>
+      <input type="text" name="proyecto" style="width:100%; margin-bottom:18px; padding:8px; border-radius:6px; border:1px solid #ececec;">
+      <button type="submit" style="background:#FF6F00; color:#fff; border:none; padding:10px 18px; border-radius:6px; cursor:pointer;">Asignar</button>
+    </form>
+  </div>
+</div>
+
+    <script src="trabajador.js"></script>
     <script src="../../Js/menu.js"></script>
     <script src="https://cdn.sheetjs.com/xlsx-0.19.3/package/dist/xlsx.full.min.js"></script>
 
