Ya se agregaron las inserciones en las tablas trabajador y proyectos

--- a/modules/trabajador/trabajador.html
+++ b/modules/trabajador/trabajador.html
@@ -216,20 +216,14 @@
     
 
     <!-- Modal Nuevo Trabajador -->
-<div id="modalNuevoTrabajador" class="modal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.3); justify-content:center; align-items:center; z-index:1000;">
-  <div style="background:#fff; padding:32px 24px; border-radius:16px; min-width:320px; box-shadow:0 4px 24px rgba(0,59,92,0.12); position:relative;">
-    <button id="cerrarModalNuevoTrabajador" style="position:absolute; top:12px; right:12px; background:none; border:none; font-size:1.2em; cursor:pointer;">
-      <i class="ri-close-line"></i>
-    </button>
-    <h2 style="margin-bottom:18px; color:#003B5C;">Nuevo Trabajador</h2>
+<div id="modalNuevoTrabajador" class="modal" style="display:none;">
+  <div>
+    <button id="cerrarModalNuevoTrabajador">Cerrar</button>
     <form id="formNuevoTrabajador">
-      <label>Nombre</label>
-      <input type="text" name="nombre" style="width:100%; margin-bottom:12px; padding:8px; border-radius:6px; border:1px solid #ececec;">
-      <label>Puesto</label>
-      <input type="text" name="puesto" style="width:100%; margin-bottom:12px; padding:8px; border-radius:6px; border:1px solid #ececec;">
-      <label>ID Empleado</label>
-      <input type="text" name="idEmpleado" style="width:100%; margin-bottom:18px; padding:8px; border-radius:6px; border:1px solid #ececec;">
-      <button type="submit" style="background:#FF6F00; color:#fff; border:none; padding:10px 18px; border-radius:6px; cursor:pointer;">Guardar</button>
+      <input type="text" name="nombre" />
+      <input type="text" name="puesto" />
+      <input type="text" name="idEmpleado" />
+      <button type="submit">Guardar</button>
     </form>
   </div>
 </div>
@@ -251,7 +245,7 @@
   </div>
 </div>
 
-    <script src="trabajador.js"></script>
+<script type="module" src="../../modules/trabajador/trabajador.js"></script>
     <script src="../../Js/menu.js"></script>
     <script src="https://cdn.sheetjs.com/xlsx-0.19.3/package/dist/xlsx.full.min.js"></script>
 
