Ya se agrego la tabla principal

--- a/modules/registros/registros.html
+++ b/modules/registros/registros.html
@@ -232,7 +232,8 @@
           <tr>
             <th>Fecha</th>
             <th>Tipo</th>
-            <th>Rfc/Folio</th>
+            <th>Pago</th>
+            <th>Folio</th>
             <th>Establecimiento</th>
             <th>Subtotal</th>
             <th>IVA</th>
@@ -314,7 +315,7 @@
     </form>
   </div>
 </div>
-    <script src="registros.js"></script>
+  <script type="module" src="registros.js"></script>
     <script src="../../Js/menu.js"></script>
     <script src="https://cdn.sheetjs.com/xlsx-0.19.3/package/dist/xlsx.full.min.js"></script>
 
