--- a/modules/trabajador/trabajador.html
+++ b/modules/trabajador/trabajador.html
@@ -235,13 +235,13 @@
       <i class="ri-close-line"></i>
     </button>
     <h2 style="margin-bottom:18px; color:#003B5C;">Asignar proyecto</h2>
-    <form id="formAsignarProyecto">
-      <label>Responsable</label>
-      <input type="text" name="responsable" style="width:100%; margin-bottom:12px; padding:8px; border-radius:6px; border:1px solid #ececec;">
-      <label>Proyecto</label>
-      <input type="text" name="proyecto" style="width:100%; margin-bottom:18px; padding:8px; border-radius:6px; border:1px solid #ececec;">
-      <button type="submit" style="background:#FF6F00; color:#fff; border:none; padding:10px 18px; border-radius:6px; cursor:pointer;">Asignar</button>
-    </form>
+   <form id="formAsignarProyecto">
+  <label>Responsable</label>
+  <select name="responsable" id="selectTrabajador" style="width:100%; margin-bottom:12px; padding:8px; border-radius:6px; border:1px solid #ececec;"></select>
+  <label>Proyecto</label>
+  <select name="proyecto" id="selectProyecto" style="width:100%; margin-bottom:18px; padding:8px; border-radius:6px; border:1px solid #ececec;"></select>
+  <button type="submit" style="background:#FF6F00; color:#fff; border:none; padding:10px 18px; border-radius:6px; cursor:pointer;">Asignar</button>
+</form>
   </div>
 </div>
 
