--- a/modules/trabajador/trabajador.html
+++ b/modules/trabajador/trabajador.html
@@ -14,6 +14,7 @@
     />
     <link rel="stylesheet" href="../../CSS/general.css" />
     <link rel="stylesheet" href="../../CSS/menu.css" />
+    <link rel="stylesheet" href="../../CSS/tablas.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="icon" href="../../img/inxiteblanco.png" type="image/png" />
   </head>
@@ -192,14 +193,14 @@
       <table id="trabajadorTable">
         <thead>
           <tr>
-            <th>Responsable</th>
+            <th style="border-radius:10px 0 0 0;">Responsable</th>
             <th>Puesto</th>
             <th>Cliente</th>
-            <th>Acciones</th>
+            <th style="border-radius:0 10px 0 0;">Acciones</th>
           </tr>
         </thead>
         <tbody id="table-body">
-          <!-- Aquí se llenarán los datos con JS -->
+
         </tbody>
       </table>
     </div>
